Pull request #1172: AG-12256 fix white background
Merge in EXTENSIONS/browser-extension from fix/AG-12256 to master

Squashed commit of the following:

commit 252563b91f0da50d27c78032d2138eed07f7cc39
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Jan 14 18:06:20 2022 +0300

    AG-12256 fix white background

--- a/Extension/assets/css/alert-popup.css
+++ b/Extension/assets/css/alert-popup.css
@@ -24,6 +24,7 @@
     left: 0;
     display: block;
     margin: 0 auto;
+    color-scheme: initial;
 }
 
 .adguard-popup-alert {
